Решение домашней задачи про рост и вес
Расчёт индекса массы тела

--- a/page.html
+++ b/page.html
@@ -5,6 +5,13 @@
     <title>Массивы</title>
 </head>
 <body>
-    
+                <label for="height" id="lab">Рост</label>
+                <input type="number" id="rost" placeholder="ваш рост">
+                <label for="weight" id="lab2">Вес</label>
+                <input type="number" id="ves" placeholder="ваш вес">
+                <input type="button"
+                       value="посчитать"
+                       onclick="console.log(ves.value / (rost.value * rost.value))"
+                       >
 </body>
 </html>
